Switched my bio to Pivotal

--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ url: "https://andreasevers.github.io" # the base hostname & protocol for your si
 # Author settings
 author: Andreas Evers
 author-pic: andreas-face.jpg
-about-author: My name is Andreas Evers. I'm a principal Java consultant @Ordina. Passionate about the Spring ecosystem, microservices, REST, clean code, ... Avid open source enthusiast & Spring contributor.
+about-author: My name is Andreas Evers. I work at Pivotal as a senior solutions architect on the Application Transformation team. I'm passionate about distributed architecture, communication protocols, microservices and software design principles. I often speaks at conferences, writes blogs and share my opinion on Twitter.
 
 # Contact links
 email: krosan@gmail.com
