--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ url: "https://andreasevers.github.io" # the base hostname & protocol for your si
 # Author settings
 author: Andreas Evers
 author-pic: andreas-face.jpg
-about-author: My name is Andreas Evers. I work at KOR Financial as CTO. Previously I worked at VMware and Pivotal as a staff engineer / advisory solutions architect on the Application Transformation team. I'm passionate about distributed architecture, communication protocols, microservices and software design principles. I often speaks at conferences, writes blogs and share my opinion on Twitter.
+about-author: My name is Andreas Evers. I work at KOR Financial as CTO. Previously I worked at VMware and Pivotal as a staff engineer / advisory solutions architect on the Application Transformation team. I'm passionate about distributed architecture, communication protocols, microservices and software design principles. I often speak at conferences, write blogs and share my opinion on Twitter.
 
 # Contact links
 email: andreas@evers.tech
